# a-star-algorithm-turtlebot

./: .gitignore  CMakeLists.txt  README.md  astar_plugin.xml  package.xml
config/: astar_rviz.rviz  nav2_params.yaml  nav2_rviz.rviz
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
include/my_astar_planner/: astar_global_planner.hpp
launch/: astar_planner.launch.py  nav2_launch.py
scripts/: goal_bridge.py  send_goal.sh
src/: astar_global_planner.cpp  astar_node.cpp  path_follower.cpp
